// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentFolder: Test blog/page-1 Check contentPlugin render 1`] = `
"<!DOCTYPE html><html lang=\\"en\\"><head><meta name=\\"generator\\" content=\\"Scully 0.0.0\\">
    <meta charset=\\"utf-8\\">
    <title>SampleBlog</title>
    <base href=\\"/\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"favicon.ico\\">
    <link rel=\\"stylesheet\\" href=\\"//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/default.min.css\\">
  <style>/* You can add global styles to this file, and also import other style files */

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

@charset \\"UTF-8\\";

.tabs label,
.text-center {
  text-align: center;
}

@font-face {
  font-family: 'Gentium Book Basic';
  font-style: normal;
  font-weight: 400;
  src: local('Gentium Book Basic'), local('GentiumBookBasic'),
    url(https://fonts.gstatic.com/s/gentiumbookbasic/v10/pe0zMJCbPYBVokB1LHA9bbyaQb8ZGjc4ULF_.ttf)
      format('truetype');
}

@font-face {
  font-family: 'Gentium Book Basic';
  font-style: normal;
  font-weight: 700;
  src: local('Gentium Book Basic Bold'), local('GentiumBookBasic-Bold'),
    url(https://fonts.gstatic.com/s/gentiumbookbasic/v10/pe0wMJCbPYBVokB1LHA9bbyaQb8ZGjcw65RvzIfc.ttf)
      format('truetype');
}

@font-face {
  font-family: Roboto;
  font-style: normal;
  font-weight: 300;
  src: local('Roboto Light'), local('Roboto-Light'),
    url(https://fonts.gstatic.com/s/roboto/v20/KFOlCnqEu92Fr1MmSU5fBBc9.ttf) format('truetype');
}

@font-face {
  font-family: Roboto;
  font-style: normal;
  font-weight: 400;
  src: local('Roboto'), local('Roboto-Regular'),
    url(https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxP.ttf) format('truetype');
}

@font-face {
  font-family: Roboto;
  font-style: normal;
  font-weight: 500;
  src: local('Roboto Medium'), local('Roboto-Medium'),
    url(https://fonts.gstatic.com/s/roboto/v20/KFOlCnqEu92Fr1MmEU9fBBc9.ttf) format('truetype');
}

@font-face {
  font-family: Roboto;
  font-style: normal;
  font-weight: 700;
  src: local('Roboto Bold'), local('Roboto-Bold'),
    url(https://fonts.gstatic.com/s/roboto/v20/KFOlCnqEu92Fr1MmWUlfBBc9.ttf) format('truetype');
}

a,
aside,
body,
div,
h1,
h2,
h3,
h4,
h5,
h6,
header,
input,
label,
menu,
p {
  font-family: Roboto, sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-bottom: 0.8em;
  line-height: 130%;
}

p {
  margin-bottom: 20px;
}

h1 {
  font-size: 40px;
}

h2 {
  font-size: 34px;
}

h3 {
  font-size: 28px;
}

h4 {
  font-size: 24.8px;
}

h5 {
  font-size: 20.8px;
}

h6 {
  font-size: 18px;
}

a,
p {
  font-size: 16px;
}

</style><style>[] {
  display: grid;
  height: 100vh;
  grid-template-rows: 60px 1fr 60px;
}

[]    > header[] {
  display: grid;
  background-color: royalblue;
  color: whitesmoke;
  margin: 0;
  padding: 0px 10px;
  grid-template-columns: 1fr 40px;
  place-items: center center;
}

header[]   h1[], footer[]   h3[] {
  margin: 0;
}

[]    > footer[] {
  display: grid;
  background-color: royalblue;
  color: whitesmoke;
  margin: 0;
  padding-right: 10px;
  justify-content: right;
  align-content: center;
}

main[] {
  background-color: whitesmoke;
  color: rgb(4, 12, 36);
  padding: 10px;
}
</style><script charset=\\"utf-8\\" src=\\"blog-blog-module-es2015.js\\"></script><script charset=\\"utf-8\\" src=\\"pagenotfound-pagenotfound-module-es2015.js\\"></script><style>h1[] {
  color: rgb(51, 6, 37);
  background-color: rgb(248, 211, 236);
  padding: 5px;
  border-radius: 5px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}
</style><style>
      :host {
        display: none;
      }
      scully-content {
        display: none;
      }
    </style><script>window['ScullyIO']='generated';</script></head>

  <body scully-version=\\"0.0.0\\">
    <app-root class=\\"foo\\" =\\"\\" > Scully demo blog app! <small =\\"\\">rendering inside scully</small></h1><a =\\"\\" ng-reflect-router-link=\\"/home\\" href=\\"/home/\\">🏠</a></header><main =\\"\\"><router-outlet =\\"\\"></router-outlet><app-blog =\\"\\"><h3 =\\"\\">Scully blog content</h3>
<hr =\\"\\">


<!--scullyContent-begin--><h1 id=\\"page-1\\" =\\"\\">Page 1</h1>
<h2 id=\\"or-how-to-do-interesting-blog-things\\" =\\"\\">or, how to do interesting blog things</h2>
<pre =\\"\\"><code class=\\"language-typescript\\" =\\"\\"><span class=\\"hljs-built_in\\" =\\"\\">console</span>.log(<span class=\\"hljs-string\\" =\\"\\">'hello world'</span>);
<span class=\\"hljs-built_in\\" =\\"\\">console</span>.log(<span class=\\"hljs-string\\" =\\"\\">'yah'</span>);
<span class=\\"hljs-keyword\\" =\\"\\">const</span> x = <span class=\\"hljs-number\\" =\\"\\">123</span>;</code></pre>
<p =\\"\\">Hello Dolly?</p>
<p =\\"\\">Related information <a href=\\"/blog/___UNPUBLISHED___k5nhcflm_SJwD4Z0QDrIHg1PGHo2mrfLZE8sfUsPy/\\" =\\"\\">page-2</a></p>
<h1 id=\\"down-under\\" =\\"\\">Down-under</h1>
<p =\\"\\"><a href=\\"/home/\\" =\\"\\">site-map</a></p>
<!--scullyContent-end--><script>try {window['scullyContent'] = {cssId:\\"\\",html:document.body.innerHTML.split('<!--scullyContent-begin-->')[1].split('<!--scullyContent-end-->')[0]};} catch(e) {console.error('scully could not parse content');}</script><scully-content =\\"\\"></scully-content>

<hr =\\"\\">
<h4 =\\"\\">End of blog content</h4>

<span =\\"\\">
  <a =\\"\\" ng-reflect-router-link=\\"/blog/2014/2/12/asdf\\" href=\\"/blog/2014/2/12/asdf/\\">/blog/2014/2/12/asdf</a>
  <br =\\"\\">
</span><span =\\"\\">
  <a =\\"\\" ng-reflect-router-link=\\"/blog/page-1\\" href=\\"/blog/page-1/\\">/blog/page-1</a>
  <br =\\"\\">
</span><span =\\"\\">
  <a =\\"\\" ng-reflect-router-link=\\"/blog/page-3\\" href=\\"/blog/page-3/\\">/blog/page-3</a>
  <br =\\"\\">
</span><span =\\"\\">
  <a =\\"\\" ng-reflect-router-link=\\"/blog/page-4\\" href=\\"/blog/page-4/\\">/blog/page-4</a>
  <br =\\"\\">
</span><span =\\"\\">
  <a =\\"\\" ng-reflect-router-link=\\"/blog/page-5\\" href=\\"/blog/page-5/\\">/blog/page-5</a>
  <br =\\"\\">
</span><span =\\"\\">
  <a =\\"\\" ng-reflect-router-link=\\"/blog/test/testing\\" href=\\"/blog/test/testing/\\">/blog/test/testing</a>
  <br =\\"\\">
</span><!--bindings={
  \\"ng-reflect-ng-for-of\\": \\"[object Object],[object Object\\"
}-->
</app-blog><!--container--></main><footer =\\"\\"><h3 =\\"\\">Made with ❤️ <strong =\\"\\">@HeroDevs</strong></h3></footer></app-root>
  <script id=\\"ScullyIO-transfer-state\\"></script><script src=\\"runtime-es2015.js\\" type=\\"module\\"></script><script src=\\"runtime-es5.js\\" nomodule=\\"\\" defer=\\"\\"></script><script src=\\"polyfills-es5.js\\" nomodule=\\"\\" defer=\\"\\"></script><script src=\\"polyfills-es2015.js\\" type=\\"module\\"></script><script src=\\"styles-es2015.js\\" type=\\"module\\"></script><script src=\\"styles-es5.js\\" nomodule=\\"\\" defer=\\"\\"></script><script src=\\"vendor-es2015.js\\" type=\\"module\\"></script><script src=\\"vendor-es5.js\\" nomodule=\\"\\" defer=\\"\\"></script><script src=\\"main-es2015.js\\" type=\\"module\\"></script><script src=\\"main-es5.js\\" nomodule=\\"\\" defer=\\"\\"></script>

</body></html>"
`;

exports[`Static: Test blog index Check clean blog index by scully 1`] = `
"<!DOCTYPE html><html lang=\\"en\\"><head><meta name=\\"generator\\" content=\\"Scully 0.0.0\\">
    <meta charset=\\"utf-8\\">
    <title>SampleBlog</title>
    <base href=\\"/\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"favicon.ico\\">
    <link rel=\\"stylesheet\\" href=\\"//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/default.min.css\\">
  <style>/* You can add global styles to this file, and also import other style files */

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

@charset \\"UTF-8\\";

.tabs label,
.text-center {
  text-align: center;
}

@font-face {
  font-family: 'Gentium Book Basic';
  font-style: normal;
  font-weight: 400;
  src: local('Gentium Book Basic'), local('GentiumBookBasic'),
    url(https://fonts.gstatic.com/s/gentiumbookbasic/v10/pe0zMJCbPYBVokB1LHA9bbyaQb8ZGjc4ULF_.ttf)
      format('truetype');
}

@font-face {
  font-family: 'Gentium Book Basic';
  font-style: normal;
  font-weight: 700;
  src: local('Gentium Book Basic Bold'), local('GentiumBookBasic-Bold'),
    url(https://fonts.gstatic.com/s/gentiumbookbasic/v10/pe0wMJCbPYBVokB1LHA9bbyaQb8ZGjcw65RvzIfc.ttf)
      format('truetype');
}

@font-face {
  font-family: Roboto;
  font-style: normal;
  font-weight: 300;
  src: local('Roboto Light'), local('Roboto-Light'),
    url(https://fonts.gstatic.com/s/roboto/v20/KFOlCnqEu92Fr1MmSU5fBBc9.ttf) format('truetype');
}

@font-face {
  font-family: Roboto;
  font-style: normal;
  font-weight: 400;
  src: local('Roboto'), local('Roboto-Regular'),
    url(https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxP.ttf) format('truetype');
}

@font-face {
  font-family: Roboto;
  font-style: normal;
  font-weight: 500;
  src: local('Roboto Medium'), local('Roboto-Medium'),
    url(https://fonts.gstatic.com/s/roboto/v20/KFOlCnqEu92Fr1MmEU9fBBc9.ttf) format('truetype');
}

@font-face {
  font-family: Roboto;
  font-style: normal;
  font-weight: 700;
  src: local('Roboto Bold'), local('Roboto-Bold'),
    url(https://fonts.gstatic.com/s/roboto/v20/KFOlCnqEu92Fr1MmWUlfBBc9.ttf) format('truetype');
}

a,
aside,
body,
div,
h1,
h2,
h3,
h4,
h5,
h6,
header,
input,
label,
menu,
p {
  font-family: Roboto, sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-bottom: 0.8em;
  line-height: 130%;
}

p {
  margin-bottom: 20px;
}

h1 {
  font-size: 40px;
}

h2 {
  font-size: 34px;
}

h3 {
  font-size: 28px;
}

h4 {
  font-size: 24.8px;
}

h5 {
  font-size: 20.8px;
}

h6 {
  font-size: 18px;
}

a,
p {
  font-size: 16px;
}

</style><style>[] {
  display: grid;
  height: 100vh;
  grid-template-rows: 60px 1fr 60px;
}

[]    > header[] {
  display: grid;
  background-color: royalblue;
  color: whitesmoke;
  margin: 0;
  padding: 0px 10px;
  grid-template-columns: 1fr 40px;
  place-items: center center;
}

header[]   h1[], footer[]   h3[] {
  margin: 0;
}

[]    > footer[] {
  display: grid;
  background-color: royalblue;
  color: whitesmoke;
  margin: 0;
  padding-right: 10px;
  justify-content: right;
  align-content: center;
}

main[] {
  background-color: whitesmoke;
  color: rgb(4, 12, 36);
  padding: 10px;
}
</style><script charset=\\"utf-8\\" src=\\"blog-blog-module-es2015.js\\"></script><script charset=\\"utf-8\\" src=\\"pagenotfound-pagenotfound-module-es2015.js\\"></script><style>[] {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 10px;
}

[]   h1[]:first-child {
  grid-column: span 3;
  text-align: center;
}

article[] {
  background-color: royalblue;
  padding: 5px;
  border-radius: 5px;
  color: whitesmoke;
}
</style><script>window['ScullyIO']='generated';</script></head>

  <body scully-version=\\"0.0.0\\">
    <app-root class=\\"foo\\" =\\"\\" > Scully demo blog app! <small =\\"\\">rendering inside scully</small></h1><a =\\"\\" ng-reflect-router-link=\\"/home\\" href=\\"/home/\\">🏠</a></header><main =\\"\\"><router-outlet =\\"\\"></router-outlet><app-blog-list =\\"\\"><h1 =\\"\\">Overview of blog posts</h1><a =\\"\\" ng-reflect-router-link=\\"/blog/2014/2/12/asdf\\" href=\\"/blog/2014/2/12/asdf/\\"><article =\\"\\"><h3 =\\"\\">Deeply embedded</h3><h4 =\\"\\">11/27/19</h4><p =\\"\\">This is the deep folder demo page in this sample.</p></article></a><a =\\"\\" ng-reflect-router-link=\\"/blog/page-1\\" href=\\"/blog/page-1/\\"><article =\\"\\"><h3 =\\"\\">My first page</h3><h4 =\\"\\">11/26/19</h4><p =\\"\\">This is the first demo page in this sample.</p></article></a><a =\\"\\" ng-reflect-router-link=\\"/blog/page-3\\" href=\\"/blog/page-3/\\"><article =\\"\\"><h3 =\\"\\">My third page</h3><h4 =\\"\\">11/28/19</h4><p =\\"\\">At this point, I should write something different in here.</p></article></a><a =\\"\\" ng-reflect-router-link=\\"/blog/page-4\\" href=\\"/blog/page-4/\\"><article =\\"\\"><h3 =\\"\\">The Rainbow Cat, A free book out of the Guttenberg library</h3><h4 =\\"\\">12/16/19</h4><p =\\"\\"></p></article></a><a =\\"\\" ng-reflect-router-link=\\"/blog/page-5\\" href=\\"/blog/page-5/\\"><article =\\"\\"><h3 =\\"\\">/blog/page-5</h3><h4 =\\"\\"></h4><p =\\"\\"></p></article></a><a =\\"\\" ng-reflect-router-link=\\"/blog/test/testing\\" href=\\"/blog/test/testing/\\"><article =\\"\\"><h3 =\\"\\">My test sub page</h3><h4 =\\"\\">11/27/19</h4><p =\\"\\">This is the second demo page in this sample.</p></article></a><!--bindings={
  \\"ng-reflect-ng-for-of\\": \\"[object Object],[object Object\\"
}--></app-blog-list><!--container--></main><footer =\\"\\"><h3 =\\"\\">Made with ❤️ <strong =\\"\\">@HeroDevs</strong></h3></footer></app-root>
  <script id=\\"ScullyIO-transfer-state\\"></script><script src=\\"runtime-es2015.js\\" type=\\"module\\"></script><script src=\\"runtime-es5.js\\" nomodule=\\"\\" defer=\\"\\"></script><script src=\\"polyfills-es5.js\\" nomodule=\\"\\" defer=\\"\\"></script><script src=\\"polyfills-es2015.js\\" type=\\"module\\"></script><script src=\\"styles-es2015.js\\" type=\\"module\\"></script><script src=\\"styles-es5.js\\" nomodule=\\"\\" defer=\\"\\"></script><script src=\\"vendor-es2015.js\\" type=\\"module\\"></script><script src=\\"vendor-es5.js\\" nomodule=\\"\\" defer=\\"\\"></script><script src=\\"main-es2015.js\\" type=\\"module\\"></script><script src=\\"main-es5.js\\" nomodule=\\"\\" defer=\\"\\"></script>

</body></html>"
`;
